# localprojections

./: .gitignore  .readthedocs.yaml  LICENSE.md  README.md  __init__.py  environment.yml  localprojections.py  pyproject.toml  readthedocs.yml  requirements.txt  requirements_all.txt
docs/: conf.py  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
examples/: local_projections.ipynb
examples/data/: lplin_data.csv  lpliniv_data.csv
