[project]
name = "localprojections"
version = "0.0.1"
authors = [
  { name="Vadim Elenev", email="elenev@live.com" },
]
description = "Jorda (2005) Local Projections in Python"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/elenev/localprojections"
"Bug Tracker" = "https://github.com/elenev/localprojections/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"