[tool.poetry]
name = "localprojections"
version = "0.1.0"
authors = ["Vadim Elenev"]
description = "Jorda (2005) Local Projections in Python"
readme = "README.md"
license = "MIT"

[project.urls]
"Homepage" = "https://github.com/elenev/localprojections"
"Bug Tracker" = "https://github.com/elenev/localprojections/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.1"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
statsmodels = "^0.13.5"
patsy = "^0.5.3"
linearmodels = "^4.31"

[tool.poetry.group.examples.dependencies]
country-converter = "^1.0.0"
ipykernel = "^6.22.0"
